# nigiri

./: .gitignore  BUILD_GUIDE.md  CHANGES.md  CMakeLists.txt  PUSH_TO_GITHUB.md  README_REPO.md  build_wheel.sh  pyproject.toml  pytest.ini  setup.py  test_bindings.py  test_comprehensive.py  test_final.py  test_import.py  test_wheel.sh
.github/workflows/: wheels.yml
include/nigiri/: translations_view.h
include/nigiri/loader/gtfs/: feed_info_test.h
nigiri/: __init__.py
python/: API.md  CHECKLIST.md  CMakeLists.txt  DELIVERY.md  INSTALL.md  PROJECT_COMPLETE.md  QUICKREF.md  README.md  SUMMARY.md  bindings.cpp  pyproject.toml
python/examples/: advanced_routing.py  basic_routing.py  const.py  explore_timetable.py  realtime_updates.py
python/src/: routing.cc  timetable.cc
python/tests/: test_loader.py  test_routing.py  test_types.py
test/test_data/gtfs/toy/: agency.txt  routes.txt  stop_times.txt  stops.txt  trips.txt
